feat: finishing aws sqs, lambda and s3 config

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
+	implementation 'org.json:json:20240205'
 	implementation 'com.amazonaws:aws-java-sdk-s3'
 	implementation 'com.amazonaws:aws-java-sdk-sns'
 	compileOnly 'org.projectlombok:lombok'
